# LZKP

./: .gitignore  CMakeLists.txt  Mersenne.cpp  Mersenne.h  README.md  Ring31.cpp  Ring31.h  RingNTL.cpp  RingNTL.h  block.h  cac_prover.cpp  cac_prover.h  cac_prover_logic.cpp  cac_prover_logic.h  cac_prover_party.cpp  cac_prover_party.h  cac_verifier.cpp  cac_verifier.h  cac_verifier_logic.cpp  cac_verifier_logic.h  cac_verifier_party.cpp  cac_verifier_party.h  execClients.sh  execServers.sh  factory.cpp  factory.h  main.cpp  parameters.h  party.cpp  party.h  protocol.cpp  protocol_m61.cpp  prover.cpp  prover.h  prover_logic.cpp  prover_logic.h  prover_party.cpp  prover_party.h  prover_wrapper.cpp  prover_wrapper.h  (+24 more)
fields/: field_15_bit.cpp  field_15_bit.h  field_59_bit.cpp  field_59_bit.h  mersenne.cpp  mersenne.h
scripts/: bound.txt  exact.txt  execClients.sh  execClients_v1.5.sh  execClients_v2.0.sh  execClients_v3.0.sh  execServers.sh  execServers_v1.5.sh  execServers_v2.0.sh  execServers_v3.0.sh  find_parameters_for_protocol_1_bound_formula.py  find_parameters_for_protocol_1_exact_formula.py  measurements_v1.5.txt  parseMeasurements.py  stats.xls  stats_v1.5.txt
scripts/raw_data/: measurements_v1.0.txt  measurements_v1.1.txt  measurements_v1.5-2.txt  measurements_v1.6-2.txt  measurements_v1.6.txt  measurements_v1.7.txt  measurements_v2.0.txt  measurements_v2.1.txt  measurements_v3.0.txt  results_v1.0.txt  results_v1.1.txt  results_v1.5-2.txt  results_v1.5.txt  results_v1.6-2.txt  results_v1.6.txt  results_v1.7.txt  results_v2.0.txt  results_v2.1.txt  results_v3.0.txt
test/: catch.hpp  unit_tests.cpp  unit_tests_ZpMersenneIntElement.cpp  unit_tests_ZpMersenneLongElement.cpp  unit_tests_field15bit.cpp  unit_tests_field59bit.cpp
